# fluid-voice-windows

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.agents/: project.json
apps/windows/: index.html  package.json  vite.config.ts
apps/windows/src/: App.tsx  styles.css  tauri.ts  types.ts
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: audio.rs  commands.rs  enhancement.rs  history.rs  hotkey.rs  lib.rs  main.rs  model_catalog.rs  secrets.rs  settings.rs  state.rs  text_insertion.rs  transcription.rs
docs/: windows-mvp-prd.md
tasks/: history.md  lessons.md  todo.md
